<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mid360_simulation</name>
  <version>1.0.0</version>
  <description>
    Gazebo simulation package for Livox Mid-360 LiDAR on baselink
  </description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>
  <author email="your_email@example.com">Your Name</author>

  <!-- 构建工具依赖 -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- 核心依赖包 -->
  <depend>gazebo_ros_pkgs</depend>
  <depend>ros2_livox_simulation</depend>
  
  <!-- 运行时依赖 -->
  <exec_depend>xacro</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- Gazebo 模型和插件路径配置 -->
    <gazebo_ros
      gazebo_model_path="${prefix}/meshes"
      gazebo_plugin_path="${prefix}/plugins"
    />
  </export>
</package>